--- a/apps/angular-test-app/src/index.html
+++ b/apps/angular-test-app/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>FDS Test App</title>
+    <title>FDS Angular Components</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
